# sdl2-wrapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  basic_window.cpp  compile_commands.json
SDL_utils/: CMakeLists.txt  SDL_wrapper.cpp
SDL_utils/include/SDL_utils/: SDL_wrapper.h
SDL_wrapper/: CMakeLists.txt  wrapper.cpp
SDL_wrapper/include/SDL_wrapper/: wrapper.h
alpha_blending/: alpha_blending.cpp
animation/: animation.cpp
audio_recorder/: audio_recorder.cpp  audio_recorder.h
background_infinite/: background_infinite.cpp
background_scrolling/: background_scrolling.cpp
bitmap_fonts/: bitmap_fonts.cpp
cap_frame_rate/: cap_frame_rate.cpp
clip_rendering/: clip_rendering.cpp
color_keying/: color_keying.cpp
color_modulation/: color_modulation.cpp
file_list/: file_list.cpp
frame_independent_movement/: frame_independent_movement.cpp
frame_rate/: frame_rate.cpp
frame_rate_cap/: frame_rate_cap.cpp
geomoetry_render/: geomoetry_render.cpp
grid/: grid.cpp
handle_input_and_clipboard/: handle_input_and_clipboard.cpp
handle_key_event/: handle_key_event.cpp
handle_mouse_event/: handle_mouse_event.cpp
handle_user_defined_event/: handle_user_defined_event.cpp
include/: utils.h
infinite_background/: infinite_background.cpp
input_and_clipboard/: input_and_clipboard.cpp
key_handler/: key_handler.cpp
key_state/: key_state.cpp
motion/: motion.cpp
mouse_event/: mouse_event.cpp
multiple_window/: multiple_window.cpp
particle_engine/: particle_engine.cpp
png/: png.cpp
recorder/: recorder.cpp
render_to_texture/: render_to_texture.cpp
renderer_geomoetry/: renderer_geomoetry.cpp
renderer_viewport/: renderer_viewport.cpp
rotation_flipping/: rotation_flipping.cpp
scrolling/: scrolling.cpp
sound_effects_and_music/: sound_effects_and_music.cpp
stretch/: stretch.cpp
surface_color_key/: surface_color_key.cpp
test/: timer_test.cpp
text_manipulation/: text_manipulation.cpp
texture_alpha/: texture_alpha.cpp
texture_clip/: texture_clip.cpp
texture_flipping/: texture_flipping.cpp
texture_manipulation/: texture_manipulation.cpp
texture_modulation/: texture_modulation.cpp
texture_png/: texture_png.cpp
texture_render/: texture_render.cpp
texture_rotation/: texture_rotation.cpp
tilling/: tilling.cpp
timing/: timing.cpp
true_type_font/: true_type_font.cpp
ttf/: ttf.cpp
view_point/: view_point.cpp
widgets/include/widgets/: button.h  recording_button.h  selected_list.h  text.h  widget.h
widgets/playing_button/: playing_button.cpp
widgets/recording_button/: recording_button.cpp  test_recording_button.cpp
widgets/selected_list/: selected_list.cpp
widgets/text/: text.cpp
widgets/toggle_list/: toggle_list.cpp
window_event/: window_event.cpp
